wip: progress image fitting
+ add rerun engine module config args
+ add finite checking terminator @ fitting
+ add posed image rerun viz
! fix assignment to assing only to flows

--- a/moai/conf/examples/smplifyx/_moai_.yaml
+++ b/moai/conf/examples/smplifyx/_moai_.yaml
@@ -21,6 +21,17 @@ _moai_:
             - preprocess
             - postprocess
           objective: initial_torso_fit
+          assign:
+            init_trans: preprocess.translation.value
+        fine_fit_stage1:
+          iterations: 10
+          optimizer: fine_fit_stage1
+          # scheduler: null
+          steps:
+            - preprocess
+            - postprocess
+          objective: fine_fit_stage1
+          
       # epoch:
       #   termination: 
         # - milestone: 30
