--- a/moai/conf/engine/modules/rerun.yaml
+++ b/moai/conf/engine/modules/rerun.yaml
@@ -3,3 +3,6 @@
 _target_: moai.engine.modules.rerun.Rerun
 name: ${experiment.name}
 export: null
+parents: null #TODO: remove this from here, add a separate annotation context
+labels: null #TODO: remove this from here, add a separate annotation context
+world_coordinates: RUF
