--- a/moai/conf/model/metrics/generation/diversity.yaml
+++ b/moai/conf/model/metrics/generation/diversity.yaml
@@ -1,3 +1,3 @@
-# @package model.validation.generation.metrics.diversity
+# @package model.metrics.div
 
 _target_: moai.validation.metrics.generation.diversity.Diversity
