--- a/moai/conf/model/metrics/generation/fid.yaml
+++ b/moai/conf/model/metrics/generation/fid.yaml
@@ -1,3 +1,3 @@
-# @package model.validation.generation.metrics.fid
+# @package model.metrics.fid
 
 _target_: moai.validation.metrics.generation.fid.FID
