--- a/moai/conf/examples/smplifyx/optimization.yaml
+++ b/moai/conf/examples/smplifyx/optimization.yaml
@@ -15,7 +15,10 @@ _moai_:
         groups: global  # groups: expressive # global
       fine_fit_stage1:
         <<: *lbfgsls
-        groups: [global, expressive] # groups: expressive # [global, expressive]    
+        groups: [expressive] # groups: expressive # [global, expressive]
+      # fine_fit_stage1:
+      #   <<: *lbfgsls
+      #   groups: [global, expressive] # groups: expressive # [global, expressive]
     _criteria_:
       bad_fit:
         rmse:
