--- a/moai/conf/examples/smplifyx/options.yaml
+++ b/moai/conf/examples/smplifyx/options.yaml
@@ -15,6 +15,60 @@ engine:
   modules:
     rerun:
       world_coordinates: RFU
+      parents:
+        openpose:
+          - -1
+          - 0
+          - 1
+          - 2
+          - 3
+          - 1
+          - 5
+          - 7
+          - 1
+          - 8
+          - 9
+          - 10
+          - 8
+          - 12
+          - 13
+          - 0
+          - 0
+          - 15
+          - 16
+          - 14
+          - 19
+          - 14
+          - 11
+          - 22
+          - 11
+      labels:
+        openpose:
+          - nose
+          - neck
+          - rshoulder
+          - relbow
+          - rwrist
+          - lshoulder
+          - lelbow
+          - lwrist
+          - mhip
+          - rhip
+          - rknee
+          - rankle
+          - lhip
+          - lknee
+          - lankle
+          - reye
+          - leye
+          - rear
+          - lear
+          - lbigtoe
+          - lsmalltoe
+          - lheel
+          - rbigtoe
+          - rsmalltoe
+          - rheel
 
 # logging:
 #   name: ${experiment.name}
