--- a/moai/conf/model/monitors/visualization/rerun/posed_image.yaml
+++ b/moai/conf/model/monitors/visualization/rerun/posed_image.yaml
@@ -1,4 +1,4 @@
 # @package model.monitors.posed_image
 
-_target_: moai.visualization.rerun.posed_image.posed_image
+_target_: moai.visualization.rerun.image.posed_image
 _partial_: true
