--- a/moai/conf/model/parameters/groups/human/body/expressive.yaml
+++ b/moai/conf/model/parameters/groups/human/body/expressive.yaml
@@ -5,5 +5,5 @@ parameters:
   - preprocess.smplx.global_orient
 monads:      
   - preprocess.translation
-  - preprocess.betas
+  # - preprocess.betas
   - preprocess.embedding
