--- a/moai/conf/examples/smplifyx/flows.yaml
+++ b/moai/conf/examples/smplifyx/flows.yaml
@@ -16,7 +16,7 @@ _moai_:
       betas:
         void: [color]
         out: [betas]
-      vposer2:
+      vposer1: # vposer2:
         decode: [embedding]
         out: [decoded]
       smplx:
