--- a/moai/conf/examples/smplifyx/model.yaml
+++ b/moai/conf/examples/smplifyx/model.yaml
@@ -33,8 +33,11 @@ model:
     #         - graphs.preprocess.smplx.betas          
     #         - graphs.preprocess.embedding.value
     initializers:
-      vposer2:
-        ckpt: ${SMPLX_ROOT}\V02_05\V02_05\
+      # vposer2:
+      #   ckpt: ${SMPLX_ROOT}\V02_05\V02_05\
+      #   cache: true
+      vposer1:
+        ckpt: ${SMPLX_ROOT}\vposer\
         cache: true
       zero_flow_params:
         keys:
@@ -64,44 +67,5 @@ model:
   modifications:
     forward_mode:
       monads:
-        preprocess.vposer2: eval
-
-  # graphs: # feedforward:
-  #   initialize_translation:
-  #     joints2d: [keypoints]
-  #     joints3d: [body.joints]
-  #     out: [init_trans]
-  #   preprocess:
-  #     embedding:
-  #       void: [color]
-  #       out: [embedding]
-  #     translation:
-  #       void: 
-  #         # - color
-  #         - ${mi:"color -1"}
-  #       out: [translation]
-  #     betas:
-  #       void: [color]
-  #       out: [betas]
-  #     vposer2:
-  #       decode: [embedding]
-  #       out: [decoded]
-  #     smplx:
-  #       pose: [decoded.pose]
-  #       shape: [betas]
-  #       out: [body]
-  #   postprocess:
-  #     weak_perspective_camera:
-  #       points: [body.joints]
-  #       translation: [translation]
-  #       image: [color]
-  #       out: [joints2d]
-  #     index:
-  #       tensor: [joints2d, keypoints]
-  #       out: [torso_joints2d, torso_keypoints]
-  #     binary:
-  #       tensor: [init_trans]
-  #       out: [z_mask]
-  #     openpose_split:
-  #       joints: [joints2d, keypoints, confidence]
-  #       out: [split_joints2d, split_keypoints, split_confidence]
+        # preprocess.vposer2: eval
+        preprocess.vposer1: eval
