--- a/moai/conf/model/monads/human/body/prior/vposer1.yaml
+++ b/moai/conf/model/monads/human/body/prior/vposer1.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.vposer1
 
-_target_: moai.monads.human.body.prior.VPoser1
+_target_: moai.monads.human.body.prior.vposer1.VPoser1
 flatten_pose: true
