fix: config keys/names updated to preserve semantics
changed these keys/names of the execution definition:
 - `groups, metrics, tensors, frequency, fit, batch, epoch, iter, params, type, optimizer, scheduler, interval, flows, objective, assign, iterations, termination, fit, val, test, predict`
to underscore pre/suffixed names:
 -  `_groups_, _metrics_, _monitors_, _frequency_, _fit_, _batch_, _epoch_, _stage_, _params_, _type_, _optimizer_, _scheduler_, _interval_, _flows_, _objective_, _assign_, _iterations_, _termination_, _fit_, _val_, _test_, _predict_`

--- a/moai/conf/examples/smplifyx/monitoring.yaml
+++ b/moai/conf/examples/smplifyx/monitoring.yaml
@@ -115,7 +115,5 @@ _moai_:
         log_results:
           _frequency_: 1
           # _flows_: []
-          _metrics_:
-            - fit_quality
-          _monitors_:
-            - show_mesh_batch
+          _metrics_: [fit_quality]
+          _monitors_: [show_mesh_batch]
